plugins: move unused gazebo plugins to attic

--- a/src/plugins/gazebo/Makefile
+++ b/src/plugins/gazebo/Makefile
@@ -16,9 +16,9 @@
 BASEDIR = ../../..
 include $(BASEDIR)/etc/buildsys/config.mk
 
-SUBDIRS	= gazsim-light-front gazsim-llsfrbcomm gazsim-puck-detection \
-	  gazsim-llsf-control gazsim-llsf-statistics \
-	  gazsim-machine-signal gazsim-gripper \
+SUBDIRS	= gazsim-llsfrbcomm \
+	  gazsim-llsf-control \
+	  gazsim-gripper \
 	  gazsim-conveyor gazsim-tag-vision \
 	  gazsim-navgraph-generator
 
