--- a/cfg/conf.d/skills.yaml
+++ b/cfg/conf.d/skills.yaml
@@ -6,11 +6,5 @@ doc-url: !url https://trac.fawkesrobotics.org/wiki/Carologistics/skills
 skills:
   # The distance the robot has to drive after being aligned
   # in front of the mps
-  approach_distance_conveyor:
+  align_distance_conveyor:
     x: 0.31
-  approach_distance_laser:
-    x: 0.27
-  conveyor_align:
-    euclidean_fitness_tol: 5
-  mps_align:
-    x_dist_default: 0.35
