--- a/cfg/gazsim-configurations/gazsim-config-override.yaml
+++ b/cfg/gazsim-configurations/gazsim-config-override.yaml
@@ -113,6 +113,12 @@ plugins/static-transforms:
       rot_roll: 0
     cam_conveyor:
       trans_z: -0.056
+    gazsim_gripper:
+      frame: !frame gripper_home
+      child_frame: !frame gripper
+      trans_x: 0.08
+      trans_y: 0.0
+      trans_z: 0.0
 
 plugins/mongodb:
   clients:
