--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -104,46 +104,49 @@ plugins/conveyor_pose:
     #    V
     hint:
       default:
-        x: -0.007
+        x: -0.005
         y: 0.03
         z: 0.65
 
       # Configure the initial estimate for the INPUT side (uneven tag ID)
       # On the OUTPUT side, the y value is multiplied by -1.
       input_conveyor:
-        x: 0.015
-        y: -0.02
-        z: 0.6
+        x: -0.005
+        y: 0
+        z: 0.65
       left_shelf:
         x: -0.01
         y: -0.22
-        z: 0.6
+        z: 0.65
       middle_shelf:
         x: -0.01
         y: -0.27
-        z: 0.6
+        z: 0.65
       right_shelf:
         x: -0.01
         y: -0.32
-        z: 0.6
+        z: 0.65
       slide:
         x: -0.01
         y: -0.32
-        z: 0.6
+        z: 0.65
 
 
     # Station-specific offset added to the hints configured above
+    #
+    # As above:
+    # On the OUTPUT side, the y value is multiplied by -1.
     mps_type_offset:
       cap_station:
-        y: -0.025
+        y: 0.025
       ring_station:
-        y: -0.025
+        y: 0.025
       delivery_station:
-        y: -0.025
+        y: 0.025
       base_station:
-        y: -0.025
+        y: 0.025
       storage_station:
-        y: -0.025
+        y: 0.025
 
   if:
     # the prefix used for all interfaces
