--- a/cfg/conf.d/static_transforms.yaml
+++ b/cfg/conf.d/static_transforms.yaml
@@ -78,3 +78,13 @@ plugins/static-transforms:
       rot_pitch: 0
       rot_roll: -1.57
 
+    shelf_record:
+      frame: !frame gripper
+      child_frame: !frame shelf_record
+      trans_x: 0.2
+      trans_y: -0.1
+      trans_z: -0.04
+      rot_yaw: -1.57
+      rot_pitch: 0
+      rot_roll: -1.57
+
