--- a/cfg/conf.d/bbsync.yaml
+++ b/cfg/conf.d/bbsync.yaml
@@ -90,3 +90,5 @@ fawkes/bbsync:
         laser_front_dist: Position3DInterface::front_dist
       writing:
         tfTags: TransformInterface::TF tags
+        conveyor_pose: TransformInterface::/tf/conveyor_pose
+        conveyor_pose_init: TransformInterface::/tf/conveyor_pose_initial_guess
