--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -40,7 +40,9 @@ plugins/conveyor_pose:
   reference_models:
     input_conveyor: "conveyor_pcls/with_cone.pcd"
     output_conveyor: "conveyor_pcls/no_cone.pcd"
-    shelf: "conveyor_pcls/no_cone.pcd"
+    shelf_left: "conveyor_pcls/no_cone.pcd"
+    shelf_middle: "conveyor_pcls/no_cone.pcd"
+    shelf_right: "conveyor_pcls/no_cone.pcd"
     slide: "conveyor_pcls/slide.pcd"
 
   voxel_grid:
