config: add missing plugins to the m-clips-executive meta plugin

--- a/cfg/conf.d/meta_plugins_laptop.yaml
+++ b/cfg/conf.d/meta_plugins_laptop.yaml
@@ -29,6 +29,9 @@ fawkes/meta_plugins:
   m-clips-executive:
     - m-clips
     - m-fv-vision
+    - m-robot-memory
+    - clips_robot_memory
+    - clips-pddl-parser
     - clips-executive
     - clips-executive-rest-api
   m-skiller:
