cfg clips-executive: disable waiting for robot-memory
For cluster-managed replica sets we do not get the necessary
information.

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -87,10 +87,10 @@ clips-executive:
           - name: protobuf
           - name: tf
           - name: smt
-          - name: robmem-wait
-            feature-request: false
-            files: ["BATCH|robmem-wait-init.clp"]
-            wait-for: robmem-initialized
+          #- name: robmem-wait
+          #  feature-request: false
+          #  files: ["BATCH|robmem-wait-init.clp"]
+          #  wait-for: robmem-initialized
           - name: robot_memory
         stage-3:
           - name: utils
