--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -32,12 +32,11 @@ plugins/conveyor_pose:
   # the conveyor (align the conveyor cloud & the TF in rviz)
   model_origin_frame: "gripper_fingers"
 
-  # Path to the default model used by the icp
-  # Relative paths (i.e. not starting with "/") are looked up in CONFDIR (e.g. fawkes-robotino/cfg)
-  default_model: "conveyor_pcls/default.pcd"
 
   # Paths to the default PCD models taking as reference model in the conveyor pose plugin
+  # Paths are looked up in CONFDIR (e.g. fawkes-robotino/cfg)
   reference_models:
+    default: "conveyor_pcls/default.pcd"
     input_conveyor: "conveyor_pcls/with_cone.pcd"
     output_conveyor: "conveyor_pcls/no_cone.pcd"
     shelf: "conveyor_pcls/no_cone.pcd"
