conveyor_pose.yaml: Use gripper_fingers_record
The transform inside the fingers that is rotated like conveyor_cam is still
required for model calibration in conveyor_pose, so use the newly added
gripper_fingers_record frame for that.

--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -36,7 +36,7 @@ plugins/conveyor_pose:
   # saving it. The robot should be positioned so that this frame is at the desired origin of
   # the conveyor (align the conveyor cloud & the TF in rviz)
   # Normally this should be gripper_fingers, except for the middle shelf should be shelf_record
-  model_origin_frame: "gripper_fingers"
+  model_origin_frame: "gripper_fingers_record"
 
 
   # Paths to the reference models are looked up in CONFDIR (e.g. fawkes-robotino/cfg)
