cx/rcll2017: add WAIT goal with a wait action
We do not want to move between waiting positions all the time. Thus,
also add a WAIT goal that does not move to the next waiting position,
but instead waits at the current waiting position.

Add a wait action that waits for 5 seconds before succeeding.

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -126,6 +126,7 @@ clips-executive:
               - rcll2017/noop-actions.clp
               - rcll2017/refbox-actions.clp
               - rcll2017/lock-actions.clp
+              - rcll2017/wait-actions.clp
           - name: execution-monitoring
             file: rcll2017/execution-monitoring.clp
 
