--- a/cfg/conf.d/clips-agent.yaml
+++ b/cfg/conf.d/clips-agent.yaml
@@ -57,7 +57,7 @@ clips-agent:
     magenta-port: 4442
 
     team-name: Carologistics
-    crypto-key: randomkey
+    crypto-key: eeg3Eis7hi
     cipher: "aes-128-cbc"
 
     #Timeouts used in the locking:
