cx/rcll2018: add maintenance goal to auto-expire locks periodically
The goal adds a LOCKEXPIRE achieve goal every 5 seconds, which executes
expire-locks to check for any locks that have not been renewed.

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -116,6 +116,7 @@ clips-executive:
               - rcll2018/goal-reasoner.clp
               - rcll2018/goal-production.clp
               - rcll2018/exploration.clp
+              - rcll2018/goal-lock-expiration.clp
           - name: goal-expander
             file: rcll2018/fixed-sequence.clp
           - name: action-selection
