config: add two arbiter instances to the mongodb replica set

--- a/cfg/conf.d/mongodb.yaml
+++ b/cfg/conf.d/mongodb.yaml
@@ -41,6 +41,8 @@ plugins/mongodb:
         - robotino-laptop-1:27022
         - robotino-laptop-2:27022
         - robotino-laptop-3:27022
+        - arbiter:27021
+        - arbiter:27022
 
   # The following defines the mongod instances you want
   # the mongodb plugin to run
@@ -90,3 +92,5 @@ plugins/mongodb:
           - robotino-laptop-1:27022
           - robotino-laptop-2:27022
           - robotino-laptop-3:27022
+          - arbiter:27021
+          - arbiter:27022
