--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -191,6 +191,7 @@ clips-executive:
 
 
           master: R-2
+          single-agent-mode: FALSE
 
           waitpoint-in-cyan: R-1
           waitpoint-in-cyan: R-2
