--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -95,7 +95,7 @@ clips-executive:
           - name: utils
             file: rcll2018/utils.clp
           - name: coordination
-            file: rcll2018/coordination-mutex.clp
+            file: coordination-mutex.clp
           - name: state-estimation
             file: rcll2018/state-estimation-init.clp
           - name: worldmodel
