--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -53,6 +53,36 @@ plugins/conveyor_pose:
     shelf_middle: "conveyor_pcls/shelf_middle.pcd"
     shelf_right: "conveyor_pcls/shelf_right.pcd"
     slide: "conveyor_pcls/slide.pcd"
+    BASE_STATION_1_INPUT_CONVEYOR: "conveyor_pcls/mbsi.pcd"
+    BASE_STATION_3_INPUT_CONVEYOR: "conveyor_pcls/cbsi.pcd"
+
+    CAP_STATION_1_INPUT_CONVEYOR: "conveyor_pcls/mcs1i.pcd"
+    CAP_STATION_2_INPUT_CONVEYOR: "conveyor_pcls/mcs2i.pcd"
+    CAP_STATION_3_INPUT_CONVEYOR: "conveyor_pcls/ccs1i.pcd"
+    CAP_STATION_4_INPUT_CONVEYOR: "conveyor_pcls/ccs2i.pcd"
+
+    RING_STATION_1_INPUT_CONVEYOR: "conveyor_pcls/mrs1i.pcd"
+    RING_STATION_2_INPUT_CONVEYOR: "conveyor_pcls/mrs2i.pcd"
+    RING_STATION_3_INPUT_CONVEYOR: "conveyor_pcls/crs1i.pcd"
+    RING_STATION_4_INPUT_CONVEYOR: "conveyor_pcls/crs2i.pcd"
+
+    CAP_STATION_1_OUTPUT_CONVEYOR: "conveyor_pcls/mcs1o.pcd"
+    CAP_STATION_2_OUTPUT_CONVEYOR: "conveyor_pcls/mcs2o.pcd"
+    CAP_STATION_3_OUTPUT_CONVEYOR: "conveyor_pcls/ccs1o.pcd"
+    CAP_STATION_4_OUTPUT_CONVEYOR: "conveyor_pcls/ccs2o.pcd"
+
+    RING_STATION_1_OUTPUT_CONVEYOR: "conveyor_pcls/mrs1o.pcd"
+    RING_STATION_2_OUTPUT_CONVEYOR: "conveyor_pcls/mrs2o.pcd"
+    RING_STATION_3_OUTPUT_CONVEYOR: "conveyor_pcls/crs1o.pcd"
+    RING_STATION_4_OUTPUT_CONVEYOR: "conveyor_pcls/crs2o.pcd"
+
+    RING_STATION_1_SLIDE: "conveyor_pcls/slide_mrs1.pcd"
+    RING_STATION_2_SLIDE: "conveyor_pcls/slide_mrs2.pcd"
+    RING_STATION_3_SLIDE: "conveyor_pcls/slide_crs1.pcd"
+    RING_STATION_4_SLIDE: "conveyor_pcls/slide_crs2.pcd"
+
+    DELIVERY_STATION_1_INPUT_CONVEYOR: "conveyor_pcls/mdsi.pcd"
+    DELIVERY_STATION_3_INPUT_CONVEYOR: "conveyor_pcls/cdsi.pcd"
 
   voxel_grid:
     # Downsample all point clouds to this resolution
