cx/rcll2018: configrable timeout for reset-mps with unexpected state

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -194,3 +194,4 @@ clips-executive:
           exclusive-complexities: ["C2" , "C3"]
 
           reset-mps-unexpected-state: true
+          reset-mps-unexpected-state-timeout: 300
