cx/rcll2018: configerable reset-mps with unexpected state

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -192,3 +192,5 @@ clips-executive:
           waitpoint-in-magenta: R-3
           allowed-complexities: ["C0" , "C1"]
           exclusive-complexities: ["C2" , "C3"]
+
+          reset-mps-unexpected-state: true
