cx/rcll2018: config options to restrict mps access
Per request of mgomaa: As fallback in case communication is not working
this can be used to establish a distributed strategy without communication.

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -193,3 +193,23 @@ clips-executive:
           waitpoint-in-magenta: R-3
           allowed-complexities: ["C0" , "C1"]
           exclusive-complexities: ["C2" , "C3"]
+
+          allowed-to-operate:
+            CS1:
+              INPUT: true
+              OUTPUT: true
+            CS2:
+              INPUT: true
+              OUTPUT: true
+            DS:
+              INPUT: true
+              OUTPUT: true
+            BS:
+              INPUT: true
+              OUTPUT: true
+            RS1:
+              INPUT: true
+              OUTPUT: true
+            RS2:
+              INPUT: true
+              OUTPUT: true
