cx/rcll2018: single agent overides in  a yaml

--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -9,6 +9,7 @@ include:
   - !ignore-missing host.d/
   # Reads the host-specific configuration file, no failure if missing
   - !host-specific host.yaml
+  #- single-agent.yaml
 ---
 # Main configuration document
 
