fixup! cx/rcll2018: single agent overides in  a yaml

--- a/cfg/single-agent.yaml
+++ b/cfg/single-agent.yaml
@@ -1,10 +1,8 @@
-%YAML 1.2
-%TAG ! tag:fawkesrobotics.org,cfg/
----
-doc-url: !url http://trac.fawkesrobotics.org/wiki/Plugins/singe-agent-overrides
----
-plugins/clips-executive:
-  spec:
+include:
+    - config.yaml
+
+clips-executive:
+  specs:
     rcll2018:
       parameters:
           single-agent-mode: TRUE
