--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -98,8 +98,8 @@ clips-executive:
           - name: state-estimation
             file: rcll2017/state-estimation-init.clp
           - name: worldmodel
-            files: [ wm-robmem-sync.clp,
-                     rcll2017/init-worldmodel.clp,
+            files: [ rcll2017/init-worldmodel.clp,
+                     # wm-robmem-sync.clp,
                      rcll2017/init.clp,
                      rcll2017/game-worldmodel.clp ]
           - name: communication
