--- a/cfg/conf.d/meta_plugins.yaml
+++ b/cfg/conf.d/meta_plugins.yaml
@@ -9,7 +9,7 @@ fawkes/meta_plugins:
   m-bare: bbsync,static-transforms
   m-fv: fvbase,fvfountain
   m-fv-vision: m-bare,m-fv,tag_vision,fvretriever
-  m-clips: clips,clips-motor-switch,clips-protobuf,clips-rest-api,clips-navgraph,clips-tf
+  m-clips: clips,clips-motor-switch,clips-protobuf,clips-navgraph,clips-tf
   m-clips-agent: m-clips,m-fv-vision,clips-agent,webtools-bridge
   m-skiller: ros,m-fv-vision,navgraph,navgraph-generator,navgraph-generator-mps,skiller,realsense,conveyor-pose,ros-pcl
   m-robot-memory: mongodb,robot-memory
