--- a/cfg/gazsim-configurations/gazsim-config-override.yaml
+++ b/cfg/gazsim-configurations/gazsim-config-override.yaml
@@ -18,6 +18,7 @@ plugins/light_front:
   threashold_brightness: 120
   threashold_black: 80
   
+clips/retract-early: true
 clips-agent:
   clips-debug: true
   skill-sim: false
@@ -79,12 +80,12 @@ plugins/amcl:
   alpha2: 0.3
   save_pose_period: 0.0
   max_beams: 60
-  map_file: maps/rc-2017.png
-  origin_x: -7.5
-  origin_y: -0.5
-  map-lasergen/map_file: maps/rc-2017-wall.png
-  map-lasergen/origin_x: -7.5
-  map-lasergen/origin_y: -0.5
+  map_file: maps/rc-2016.png
+  origin_x: -7.0
+  origin_y: -1.1
+  map-lasergen/map_file: maps/rc-2016-wall.png
+  map-lasergen/origin_x: -7.0
+  map-lasergen/origin_y: -1.1
 
 plugins/laser-filter:
   front-downsample/active: false
