--- a/cfg/conf.d/skiller.yaml
+++ b/cfg/conf.d/skiller.yaml
@@ -5,7 +5,7 @@ doc-url: !url http://trac.fawkesrobotics.org/wiki/Plugins/skiller
 ---
 skiller:
   # Skill space
-  skillspace: robotino
+  skillspace: rcll2016
 
   # Watch lua files for modification and automatically reload
   # Lua if files have been changed; true to enable
