config: add rcll-sim-2016 meta plugin, remove move_base
Add a new meta plugin to run the old CLIPS-Agent with ROS but without
move_base.

--- a/cfg/conf.d/meta_plugins_gazebo.yaml
+++ b/cfg/conf.d/meta_plugins_gazebo.yaml
@@ -28,10 +28,11 @@ fawkes/meta_plugins:
     - navgraph-generator
     - navgraph-generator-mps
     - laser-lines
-    - ros-cmdvel
-    - ros-navigator
     - gazsim-vis-localization
     - skiller
+  gazsim-meta-robotino-ros-movebase:
+    - ros-cmdvel
+    - ros-navigator
   gazsim-meta-robotino-no-ros:
     - gazsim-meta-robotino
     - amcl
@@ -65,4 +66,11 @@ fawkes/meta_plugins:
     - clips-pddl-parser
     - clips-executive
     - clips-executive-rest-api
+
+  rcll-sim-2016:
+    - gazsim-meta-agent
+    - colli
+    - mps-laser-gen
+    - map-lasergen
+    - gazsim-navgraph-generator
 
