config: add FawkesConfigurationAdapter for plexil

--- a/cfg/conf.d/plexil.yaml
+++ b/cfg/conf.d/plexil.yaml
@@ -99,6 +99,7 @@ plexil:
           name: PlexilExecutive
       - type: FawkesTimeAdapter
       - type: FawkesLoggingAdapter
+      - type: FawkesConfigurationAdapter
       - type: BehaviorEngineAdapter
       - type: ProtobufCommAdapter
         attr:
