--- a/cfg/conf.d/plexil.yaml
+++ b/cfg/conf.d/plexil.yaml
@@ -158,3 +158,20 @@ plexil:
         # compile if PLX does exist or PLE has been modified after PLX.
         force: false
 
+
+    params:
+      team-name: Carologistics
+
+      robot-name: R-1
+      robot-number: 1
+
+      peer-address: 127.0.0.1
+      peer-port: 0
+      cyan-port: 0
+      magenta-port: 0
+      peer-recv-port: 4411
+      peer-send-port: 4421
+      cyan-recv-port: 4451
+      magenta-recv-port: 4461
+      cyan-send-port: 4471
+      magenta-send-port: 4481
